<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
  <package format="3">

  <name>liodom</name>
  <version>0.1.0</version>
  <description>Lidar Odometry</description>
  <maintainer email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</maintainer>
  <license>GPLv3</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>  
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <exec_depend>ros2launch</exec_depend>
  <!-- <depend>tf_conversions</depend> -->
  <!-- <depend>eigen_conversions</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
